<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>galaxy_camera_ros2</name>
  <version>2.0.0</version>
  <description>ROS 2 driver for Daheng Galaxy industrial cameras.</description>

  <maintainer email="yaoyuzhuo6@gmail.com">yaoyuzhuo</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
